clusters/home/default/grocy/80-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grocy-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: grocy
