clusters/home/default/grocy/99-deployment.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grocy
  namespace: default
spec:
  replicas: 1
  serviceName: grocy-service
  selector:
    matchLabels:
      name: grocy
  template:
    metadata:
      labels:
        name: grocy
    spec:
      containers:
      - name: grocy
        image: linuxserver/grocy:v4.0.3-ls221
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        volumeMounts:
          - name: storage
            mountPath: /config/data/grocy.db
            subPath: grocy.db
          - name: storage
            mountPath: /config/data/config.php
            subPath: config.php
        resources:
          requests:
            memory: "64Mi"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: grocy-storage
---
apiVersion: v1
kind: Service
metadata:
  name: grocy-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: grocy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx-external
  rules:
    - host: grocy.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grocy-service
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - grocy.kokev.de
      secretName: grocy-tls
